# cv-cpp

./: .gitignore  CMakeLists.txt  README.md
src/: GridComponent.cpp  GridComponent.h  GridModel.cpp  GridModel.h  Main.cpp  MainComponent.cpp  MainComponent.h
tests/: GridModelTests.cpp
